--- a/QO/ReacoesOrganicas/ReacoesOrganicasI.org
+++ b/QO/ReacoesOrganicas/ReacoesOrganicasI.org
@@ -285,18 +285,571 @@ Onde *AB* = @@latex: \ch{H2}, HX, \ch{H2O}, \ch{X2}, ROH @@
 #+end_export
 #+end_bclogo
 
+** 
+
+
+- Uma aplicação industrial da hidrogenação catalítica é na fabricação de margarinas a partir de óleos vegetais.
+- Óleos Vegetais: misturas de ésteres do glicerol com ácidos graxos. Tais ésteres são denominados *triacilglicerídeos*.
+
+  
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Exemplo de triacilglicerídeo}
+#+begin_bclogo
+#+begin_export latex
+\definesubmol{r1}{{[}CH_2{]}_7CH=CHCH_2CH=CHCH_2CH=CHCH_2CH_3}
+\definesubmol{r2}{{[}CH_2{]}_7CH=CHCH_2CH=CH{[}CH_2{]}_4CH_3}
+\definesubmol{r3}{{[}CH_2{]}_7CH=CH{[}CH_2{]}_7CH_3}
+\chemfig[atom sep=2em]{H-C(-[2,2]C(-[4]H_2)-O-C(=[2]O)-!{r1})(-[6,2]C(-[4]H_2)-O-C(=[2]O)-!{r3})-O-C(=[2]O)-!{r2}}
+
+#+end_export
+#+end_bclogo
+
+
+** 
+
+- Com a hidrogenação parcial das ligações duplas dos triacilglicerídeos, o óleo vegetal é convertido em um material de consistência pastosa denominado *margarina*.
+
+  #+ATTR_LATEX: :scale 0.05
+  [[../ReacoesOrganicas/trigli3D.png]] \par
+  [[../ReacoesOrganicas/triglimono.png]]
+  
+
 
 ** Adição de halogênios
 
+  
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de halogênios}
+#+begin_bclogo
 
+#+begin_export latex
+\schemestart
+%\chemfig{@{a4}H_2C=C@{a3}H_2}
+\chemfig{@{a4}C(-[3]H)(-[5]H)=@{a3}C(-[1]H)-[7]H}
+\qquad + \qquad 
+\chemfig{@{a2}C{\ell}-@{a1}C{\ell}} 
+\arrow 
+\chemfig{H-C([:90]-C{\ell})([:-90]-H)-C([:90]-C{\ell})([:-90]-H)-H}
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt](a1) ..controls +(300:7mm) and +(10:5mm)..(a3);
+\draw[shorten >=2pt](a2) ..controls +(110:15mm) and +(90:7mm)..(a4);
+}
+\schemestop
+#+end_export
+
+#+end_bclogo
 
 ** Adição de haletos de hidrogênio (HX)
+
+
+  
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de haletos}
+#+begin_bclogo
+
+
+#+begin_export latex
+\schemestart
+\chemfig{@{a4}C(-[3]H)(-[5]H)=@{a3}C(-[1]H)-[7]H}
+\qquad + \qquad 
+\chemfig{@{a2}H-@{a1}C{\ell}} 
+\arrow 
+\chemfig{H-C([:90]-H)([:-90]-H)-C([:90]-C{\ell})([:-90]-H)-H}
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt](a1) ..controls +(300:7mm) and +(10:5mm)..(a3);
+\draw[shorten >=2pt](a2) ..controls +(110:15mm) and +(90:7mm)..(a4);
+}
+\schemestop
+
+#+end_export
+
+#+end_bclogo 
 
 
 ** Adição de água
 
 
+
+  
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de água}
+#+begin_bclogo
+#+begin_export latex
+
+\schemestart
+\chemfig{@{a4}C(-[3]H)(-[5]H)=@{a3}C(-[1]H)-[7]H}
+\qquad + \qquad 
+\chemfig{@{a2}H-@{a1}OH} 
+\arrow{->[\ch{H^+}]}
+\chemfig{H-C([:90]-H)([:-90]-H)-C([:90]-OH)([:-90]-H)-H}
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt](a1) ..controls +(300:7mm) and +(10:5mm)..(a3);
+\draw[shorten >=2pt](a2) ..controls +(110:15mm) and +(90:7mm)..(a4);
+}
+\schemestop
+#+end_export
+
+#+end_bclogo 
+
+
+
 ** Regra de Markovnikov
+
+- Ao realizar a adição de HX (X = halogênio) ou \ch{H2O} a um  alceno, se a molécula da substância orgânica não for simétrica em relação à dupla \chemfig{C=C}, poderemos pensar na possibilidade de dois produtos diferentes.
+
+
+
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de água}
+#+begin_bclogo
+
+#+begin_export latex
+\begin{center}
+\schemestart
+\chemfig{H_3C-CH=CH_2} 
+	+
+	\chemfig{HC{\ell}}
+	\arrow(nph.mid east--.south west){->}[30]
+	\chemfig{H_3C-CH([:90]-C{\ell})-CH_2([:90]-H)} produto obtido
+	\arrow(@nph.mid east--.north west){-/>}[-30]
+	\chemfig{H_3C-CH([:90]-H)-CH_2([:90]-C{\ell})} {\color{red} produto não obtido} 
+	\schemestop
+\end{center}
+#+end_export
+#+end_bclogo
+
+** 
+*** Col left                                                            :BMCOL:
+   :PROPERTIES:
+   :BEAMER_col: 0.45
+   :BEAMER_opt: [t]
+   :END:
+
+- Em 1869, o químico Vladimir Markovnikov enunciou uma regra empírica, isto é, baseada em fatos experimentais, conhecida como Regra de Markovnikov
+- *REGRA:* na adição de HX ou \ch{H2O} a uma ligação dupla *C=C*, o átomo de *H* se adiciona preferencialmente ao carbono da dupla que já contém mais hidrogênio, ou seja, o H se adiciona ao carbono mais hidrogenado.
+
+
+*** Col right                                                           :BMCOL:
+   :PROPERTIES:
+   :BEAMER_col: 0.45
+   :BEAMER_opt: [t]
+   :END:
+#+ATTR_LATEX: :scale .5
+[[./VladimirMarkovnikov.jpg]]
+
+
+   
+** Exemplos
+
+
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Exemplos da Regra de Markovnikov}
+#+begin_bclogo
+#+begin_export latex
+	\schemestart
+	\chemfig{H_3C-CH=CH_2} 
+	+ 
+	\chemfig{HC{\ell}}
+	\arrow(c1.mid east--c2.mid west){->}
+	\chemfig{H_3C-CH([:90]-C{\ell})-CH_3}
+	\schemestop
+	\par \medskip
+	
+	\schemestart
+	\chemfig{H_3C-C([:90]-CH_3)=CH_2}
+	+
+	\chemfig{HBr}
+	\arrow(c1.mid east--c2.mid west){->}
+	\chemfig{H_3C-C([:90]-Br)([:-90]-CH_3)-CH_3}
+	\schemestop\par \medskip
+	
+	\schemestart
+	\chemfig{CH_2=[:180]-[:240]-[:180]-[:120]-[:60]-(-[:300])} + \chemfig{HI}
+	\arrow{->}
+	\chemfig{CH_3-[:120](-[:60,,,1]I)-[:240]-[:180]-[:120]-[:60]-(-[:300])}
+	\schemestop
+
+#+end_export
+#+end_bclogo
+
+
+
 
 
 * Alcinos 
+
+** Reações de Adição
+
+- A ligação tripla dos alcinos comporta-se como a dupla dos alcenos, porém pode sofrer uma ou duas adições, dependendo da quantidade do outro reagente.
+
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição em Alcinos}
+#+begin_bclogo
+#+begin_export latex
+
+\schemestart
+\chemfig{-@{at1}C~@{at2}C-} \quad  \arrow{->[\chemfig{@{a1}\color{red}{A}-\color{blue}{B}@{a2}}]} 
+\qquad \chemfig{@{at3}C([:120]-\color{red}{A})([:240]-)=@{at4}C([:60]-\color{blue}{B})([:300]-)} \arrow{->[\chemfig{@{b1}A-B@{b2}}]} \chemfig{-C([:90]-\color{red}{A})([:-90]-A)-C([:90]-\color{blue}{B})([:-90]-B)-}
+\schemestop
+\chemmove[-stealth,shorten <=3pt]%dash pattern= on 1pt off 1pt,thin]
+{
+\draw[shorten >=2pt,red](a1) ..controls +(160:7mm) and +(100:15mm)..(at1);
+\draw[shorten >=2pt,blue](a2) ..controls +(110:15mm) and +(90:7mm)..(at2);
+\draw[shorten >=2pt](b1) ..controls +(110:15mm) and +(90:7mm)..(at3);
+\draw[shorten >=2pt](b2) ..controls +(210:15mm) and +(280:20mm)..(at4);
+%%%%%
+%\draw ([shift={(-1pt,-3pt)}]c1.center) to[out=-90, in=50, looseness=-1.5] ([shift={(4pt,-16pt)}]c1.center);
+%\draw ([shift={(-2pt,-1pt)}]c1.center) to[out=-120, in=10, looseness=.9] ([shift={(-7pt,-16pt)}]c1.center);
+}
+
+#+end_export
+#+end_bclogo
+
+
+** Adição de @@latex: \ch{H2}@@ ou Hidrogenação Catalítica
+
+- A adição de \ch{H2}, se for realizada na proporção em mols de 1:1 (um mol de alcino para um mol de \ch{H2}), produzirá um alceno. Se a proporção for de 1:2, o alceno formado também sofrerá adição, produzindo um alcano.
+
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de hidrogênio}
+#+begin_bclogo
+
+- 1 mol de alcino e 1 mol de \ch{H2} produz um mol de alceno.
+  
+#+begin_export latex
+\schemestart
+\chemfig{HC~CH} + \chemfig{H_2} \arrow{->[Ni][$\Delta$]} \chemfig{H_2C=CH_2} 
+\schemestop
+#+end_export
+
+- que pode reagir com 1 mol de alceno  produzindo um mol de alcano.
+
+#+begin_export latex
+\schemestart
+\chemfig{H_2C=CH_2} + \chemfig{H_2} \arrow{->[Ni][$\Delta$]} \chemfig{H_3C-CH_3} 
+\schemestop
+#+end_export
+
+#+end_bclogo
+
+** Adição de Halogênios
+
+- A adição de \ch{C$\ell$2} ou \ch{Br2} segue os mesmos moldes da hidrogenação.
+
+  
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de halogênio}
+#+begin_bclogo
+
+- 1 mol de alcino e 1 mol de \ch{C$\ell$2} produz um mol de haleto.
+  
+#+begin_export latex
+\schemestart
+\chemfig{HC~CH} \quad + \quad \chemfig{C{\ell}_2}
+\arrow(c1.mid east--c2.mid west){->}
+\chemfig{H-C([:90]-C{\ell})=C([:90]-C{\ell})-H} 
+\schemestop
+#+end_export
+
+- que pode reagir com 1 mol de alceno  produzindo outro haleto.
+
+#+begin_export latex
+\schemestart
+ \chemfig{H-C([:90]-C{\ell})=C([:90]-C{\ell})-H} \quad + \quad 
+ \chemfig{H_2}
+ \arrow(c1.mid east--c2.mid west){->}
+ \chemfig{H-C([:90]-C{\ell})([:-90]-C{\ell})-C([:90]-C{\ell})([:-90]-C{\ell})-H}  
+\schemestop
+#+end_export
+
+#+end_bclogo
+
+** Adição de Haletos de Hidrogênio (HX)
+
+-  Neste caso a reação também pode parar no produto com ligação dupla ou continuar até o produto saturado.
+- A *Regra de Markovnikov* direciona as reações.
+
+  
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de haletos}
+#+begin_bclogo
+- 1 mol de alcino e 1 mol de \ch{C$\ell$2} produz um mol de haleto.
+  
+#+begin_export latex
+\schemestart
+\chemfig{HC~CH}\qquad  + \qquad  \chemfig{C{\ell}_2}
+ \arrow(c1.mid east--c2.mid west){->}
+\chemfig{H-C([:90]-H)=C([:90]-C{\ell})-H} 
+\schemestop
+#+end_export
+
+- que pode reagir com 1 mol de alceno  produzindo outro haleto.
+
+#+begin_export latex
+\schemestart
+ \chemfig{H-C([:90]-H)=C([:90]-C{\ell})-H}  \qquad +\qquad  \chemfig{C{\ell}_2}
+  \arrow(c1.mid east--c2.mid west){->}
+ \chemname{\chemfig{H-C([:90]-H)([:-90]-H)-C([:90]-C{\ell})([:-90]-C{\ell})-H}}{ \small Di-haleto geminal  (2 halogênio no \alert{mesmo} carbono)}  
+\schemestop
+#+end_export
+
+#+end_bclogo 
+
+
+** Adição de Água
+
+- Na hidratação de um alcino não acontece a segunda adição, pois o produto da primeira adição, um *enol*, tão logo formado, se transforma em um *aldeído* ou *cetona*, dependendo do alcino utilizado.
+
+
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de haletos na regra Markovnikov}
+#+begin_bclogo
+
+#+begin_export latex
+\centering 
+\scriptsize{
+\schemestart
+\chemname{\chemfig{H@{a1}C~@{a2}CH}}{\tiny alcino} \quad + \quad \chemname{\chemfig{@{b1}H-@{b2}OH}}{\tiny água}
+\arrow(c1.mid east--c1.mid west)
+\chemname{\chemfig{H_2C=CH([:90]-OH)}}{\tiny enol (instável)}
+ \arrow(c1.mid east--c3.mid west){<->>[\tiny \parbox{2cm}{\centering Equilíbrio\\ aldo-enólico}][]} \chemname{\chemfig{H_3C-C([:30]=O)([:330]-H)}}{\tiny aldeído} 
+\schemestop
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt,red](b1) ..controls +(up:10mm) and +(up:15mm)..(a1);
+\draw[shorten >=2pt,red](b2) ..controls +(down:14mm) and +(down:7mm)..(a2);
+}
+}
+ %%%% Esquema 2
+
+ \scriptsize{
+\schemestart
+\chemname{\chemfig{H_3C-@{a1}C~@{a2}CH}}{alcino} \quad + \quad \chemname{\chemfig{@{b1}H-@{b2}OH}}{água}
+\arrow(c1.mid east--c2.mid west)
+\chemname{\chemfig{H_3C-C=CH([:90]-OH)}}{\tiny enol (instável)}
+\arrow(c2.mid east--c3.mid west){<->>[\tiny \parbox{2cm}{\centering Equilíbrio\\ ceto-enólico}][]} \chemname{\chemfig{H_3C-C([:90]=O)-CH_3}}{\tiny cetona} 
+\schemestop
+\chemmove[-stealth,shorten <=3pt,dash pattern= on 1pt off 1pt,thin]{
+\draw[shorten >=2pt,blue](b1) ..controls +(up:10mm) and +(up:15mm)..(a1);
+\draw[shorten >=2pt,blue](b2) ..controls +(down:14mm) and +(down:7mm)..(a2);
+}
+}
+
+#+end_export
+#+end_bclogo
+
+
+* Aromáticos
+
+
+** Reações de Substituição
+:PROPERTIES:
+:BEAMER_opt: allowframebreaks
+:END:
+
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Adição de haletos}
+#+begin_bclogo
+#+begin_export latex
+\begin{tikzpicture}[node distance=0cm and 2cm]
+\node (A) 
+  {\chemfig{=^[:30]-[:90]=^[:150]-[:210]=^[:270](-[:330])}};
+  \node [right=.1cm of A](A1){+};
+  \node [right=.1cm of A1](A2) {\ch{Br2}};
+   \node[above right=of A2] (B) 
+  {\chemfig{Br-[:210]-[:270]=_[:210]-[:150]=_[:90]-[:30](=_[:330])}};
+  \node[right=.3cm of B](HB){+ \quad
+    HBr};
+\node[below right=of A2] (C)    
+  { \chemfig{Br>[:210]-[:270](<:[:330]Br)=_[:210]-[:150]=_[:90]-[:30](=_[:330])} 
+  };
+  \node [right=.7cm of A1,yshift=0.3cm](text1){\ch{CC$\ell$4}};
+  \node [right=.7cm of A1,yshift=-0.3cm](text2){\ch{FeBr3}};
+\draw[-stealth] (A2) -- ( $ (A2.0)!0.5!(B.west|-A2.0) $ ) |- (B.west) node[auto,pos=0.7] {};
+\draw[-stealth] (A2) -- ( $ (A2.0)!0.5!(C.west|-A2.0) $ ) |- (C.west) node[auto,pos=0.7] {};
+ \node[right=.3cm of HB,align=left, text width=4cm,font=\tiny](Text1){Produto de substituição};
+ \node[right=2.3cm of C,align=left, text width=4cm, font=\tiny](Text2){Produto de adi\c{c}\~{a}o \\ (\alert{não é formado})};
+\end{tikzpicture}
+#+end_export
+#+end_bclogo
+
+\framebreak
+
+#+begin_export latex
+		\begin{talltblr}[theme=fancy,
+		caption = {Algumas reações de substituição eletrofílica aromática},
+		%note{a} = {It is the first footnote.},
+		]{
+			colspec = {cX[c]}, colsep = 15mm, hlines = {2pt, white},
+			row{1} = {2em,azure3,fg=white,font=\bfseries\sffamily},
+		}
+		Nome  & Exemplo\\
+		Halogenação & \schemestart\chemfig{Ar-H}\+{1em}  \chemfig{X_2} \arrow{->[\ch{FeX3}]}\chemfig{Ar-X}\schemestop \\
+		Nitração & \schemestart\chemfig{Ar-H}\+{1em}  \chemfig{HNO_3} \arrow{->[\ch{H2SO4}]}\chemfig{Ar-NO_2}\schemestop \\
+		Sulfonação & \schemestart\chemfig{Ar-H}\+{1em}  \chemfig{SO_3} \arrow{->[\ch{H2SO4}]}\chemfig{Ar-SO_3H}\schemestop \\
+		{Alquilação de \\ Friedel-Crafts} & \schemestart\chemfig{Ar-H}\+{1em}  \chemfig{R_2} \arrow{->[\ch{A$\ell$X3}]}\chemfig{Ar-R}\schemestop \\
+		{Alquilação de \\ Friedel-Crafts} & \schemestart\chemfig{Ar-H}\+{1em}  \chemfig{RCOX} \arrow(.mid east--.mid west){->[\ch{A$\ell$X3}]}\chemfig{Ar-C([:90]=O)-R}\schemestop \\ \hline
+	\end{talltblr}
+#+end_export
+
+
+** Halogenação
+
+ - Os compostos @@latex: \ch{A$\ell$C$\ell$3}, \ch{FeC$\ell$3} ou \ch{FeBr3} @@ são catalisadores.
+
+
+ 
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Halogenação Aromáticos}
+#+begin_bclogo
+#+begin_export latex
+\schemestart
+\chemfig{**6(---(-H)---)} \+{1em} \chemfig{C{\ell}_2} \arrow{->[\ch{A$\ell$C$\ell$3}]} \chemfig{**6(---(-C{\ell})---)} \+{1em} \ch{HC$\ell$} 
+\schemestop
+#+end_export
+#+end_bclogo
+
+** Nitração e Sulfonação
+
+- Nitração: :: \ch{H2SO4} concentrado é o catalisador.
+- Sulfonação: :: necessita de \ch{H2SO4} fumegante, isto é, contendo \ch{SO3} dissolvido.   
+ 
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Nitração e Sulfonação Aromáticos}
+#+begin_bclogo
+#+begin_export latex
+\scriptsize
+\schemestart
+\chemname{\chemfig{HO-N([1]=O)([7]-O)}}{\quad\tiny ácido nítrico (\ch{HNO3})} \qquad ou \qquad  \chemfig{@{A1}HO-NO_2@{A2}} \qquad \quad \qquad \chemname{\chemfig{OH-S([:90]=O)([:-90]=O)-OH}}{\tiny ácido sulfúrico (\ch{H2SO4})} \qquad ou \qquad \chemfig{@{A3}HO-SO_3H@{A4}}
+\schemestop   
+\chemmove{
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A1) (A2) ]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A3) (A4) ]{};
+}
+
+\schemestart
+\chemfig{**6(---(-H)---)} \+{1em} \chemfig{HO-NO_2} \arrow{->[\tiny \ch{H2SO4}][\tiny concentrado]} \chemfig{**6(---(-NO_2)---)} \+{1em} \ch{HOH} 
+\schemestop
+
+
+\schemestart
+\chemfig{**6(---(-H)---)} \+{1em} \chemfig{HO-SO_3H}
+\arrow(.mid east--.mid west)%\arrow{->}
+\chemfig{**6(---(-SO_3H)---)} \+{1em} \ch{HOH} 
+\schemestop
+
+#+end_export
+#+end_bclogo
+
+
+** Alquilação e Acilação de Friedel-Crafts
+:PROPERTIES:
+:BEAMER_opt: allowframebreaks
+:END:
+
+
+
+#+begin_export latex
+\begin{center}
+\scriptsize
+\schemestart[-90]
+Haletos de aquila \arrow
+\chemup\{\parbox{4cm}{\centering
+\chemname{\chemfig{@{A1}H_3C@{A2}-C{\ell}}}{cloreto de metila}\qquad \\[1cm]
+\chemname{\chemfig{@{A3}H_3C-C@{A4}H_2-C{\ell}}}{cloreto de etila}
+}
+\chemdown\}
+\schemestop
+\chemmove{
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A1) (A2) ]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(A3) (A4) ]{};
+}
+\qquad \qquad \hspace{2cm}
+\schemestart[-90]
+Haletos de acila \arrow
+\chemup\{\parbox{5cm}{\centering
+\chemname{\chemfig{@{B1}H_3C-C@{B2}(-[7]C{\ell})=[1]O@{B4}}}{cloreto de etanoíla (acetila)}\qquad \\[.5cm]
+\chemname{\chemfig{@{V1}H_3C-CH_2-C@{V2}(-[7]C{\ell})=[1]O@{V3}}}{cloreto de propanoíla}
+}
+\chemdown\}
+\schemestop
+\chemmove{
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(B1) (B2) ]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(B2) (B4) ]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(V1) (V2) ]{};
+\node[inner sep=2pt,fill=red,fill opacity=0.2,fit=(V2) (V3) ]{};
+}
+\end{center}
+#+end_export
+\framebreak
+
+- É necessário catalisador apropriado geralmente @@latex: \ch{A$\ell$C$\ell$3}, \ch{FeC$\ell$3} ou \ch{FeBr3}.@@
+
+ 
+#+ATTR_LATEX: :options [couleur=blue!30 , arrondi=0.1 , logo=\bcplume , epBarre=3.5]{Alquilação e Acilação de Friedel-Crafts}
+#+begin_bclogo
+
+#+begin_export latex
+\small{
+\schemestart
+\chemfig{**6(---(-H)---)} \+{1em} \chemfig{H_3C-C{\ell}}
+\arrow(.base east--.base west){->[\tiny \ch{A$\ell$C$\ell$3}]}
+\chemfig{**6(---(-@{AA1}CH_3@{AA2})---)} \+{1em} \ch{HC$\ell$} 
+\schemestop
+\chemmove{
+\node[draw,dashed,inner sep=2pt,circle,yscale=1.5,red,fit=(AA1) (AA2)](circ1){};
+\node[align=center,text width=2cm,minimum width=1cm,draw=none,right=.5cm of circ1](text1){Grupo aquila (aquilação)};
+\draw[->,red] (circ1)--(text1){};
+}
+
+\medskip
+\schemestart
+\chemfig{**6(---(-H)---)} \+{1em} \chemfig{H_3C-C([:30]=O)([:330]-C{\ell})} 
+\arrow(.base east--.base west){->[\tiny \ch{A$\ell$C$\ell$3}]}
+\chemfig{**6(---(@{O1}-C([:90]=O@{O2})([:330]-CH_3)@{O3})---)} \+{1em} \ch{HC$\ell$} 
+\schemestop
+\chemmove{
+\node[draw,dashed,inner sep=2pt,circle,yscale=1.4,xscale=1.5,red,fit=(O2) (O3)](circ2){};
+\node[align=center,text width=2cm,minimum width=1cm,draw=none,below=.5cm of circ2](text2){Grupo acila  (acilação)};
+\draw[->,red] (circ2)--(text2){};
+}
+}
+
+#+end_export
+#+end_bclogo
+
+
+** Dirigência da Substituição
+:PROPERTIES:
+:BEAMER_opt: allowframebreaks
+:END:
+
+- Grupos como o \ch{-OH}, que dirigem a reação para que ocorra nas posições *orto* e *para*, são chamados de /orto-para-dirigentes/ e grupos como o \ch{-CHO}, que dirigem a reação para a posição *meta*, são chamados /meta-dirigentes/.
+
+#+begin_export latex
+
+		\begin{talltblr}[theme=fancy,
+		caption = {Grupo diregentes de substituição},
+		%note{a} = {It is the first footnote.},
+		]{
+			colspec = {X[c]}, colsep = 15mm, hlines = {2pt, white},
+			row{1,3} = {2em,azure3,fg=white,font=\bfseries\sffamily},
+		}
+		Orto-para dirigentes  \\
+		\ch{-F}\; \ch{-C{\ell}}\; \ch{-Br}\; \ch{-I} \ch{-OH} \ch{-NH2}
+	\ch{-OCH3} \ch{-N(CH3)2} \ch{-CH3} \ch{-CH2-CH3}	\\
+		Meta-dirigentes \\
+	\small{\chemfig{-C([1]=O)(-[7]H)}\; \chemfig{-C([1]=O)(-[7]OH)}\; \chemfig{-C([:90]=O)-CH_3}\;
+    \chemfig{-N([1]=O)(-[7]O)}\; \chemfig{-S([:90]=O)([:-90]=O)-OH}\; \chemfig{-C~N}} \\ \hline
+\end{talltblr}
+#+end_export
+
+\framebreak
+
+
+#+begin_export latex
+\tiny{
+\schemestart
+\chemname{\chemfig{*6(-=-=(-OH)-=)}}{fenol} \+{1.5em}
+\chemfig{C{\ell}_2}
+\arrow(@c1--.base west){->}[45,2] \chemname{\chemfig{*6(-=(-C{\ell})-=(-OH)-=)}}{orto} \+{1em} \ch{HC$\ell$}
+\arrow(@c1.mid east--.mid west){->}[0,2]
+\chemname{\chemfig{*6(-=(-C{\ell})-=(-OH)-=)}}{meta} \+{1em} \ch{HC$\ell$}
+\arrow(@c1--.north west){->}[-45,2]
+\chemname{\chemfig{*6(-=(-C{\ell})-=(-OH)-=)}}{para} \+{1em} \ch{HC$\ell$} 
+\schemestop 
+\chemmove{
+\node[align=center,text width=3cm,minimum width=1cm,draw=none,right= of c3,font=\normalfont](text2){O isômero \alert{meta} é obtido em quantidades desprezíveis.};
+\draw[->](c3)--(text2){};
+}
+}
+
+#+end_export
+
+
+
