--- a/main.org
+++ b/main.org
@@ -1,8 +1,5 @@
-<<<<<<< HEAD
-#+TITLE: Reações Orgânicas
-=======
-#+TITLE: Hidrocarbonetos II
->>>>>>> 70b4604d1ddd4c836d65e7dc46d492538c5e0f9e
+#+TITLE: Funções Orgânicas Oxigenadas
+
 #+AUTHOR: Fábio Lima
 #+DATE: 
 #+OPTIONS: H:2 toc:t num:t
@@ -23,10 +20,6 @@
 #+LATEX_HEADER: %\usetheme{minflat}
 
 
-#+LATEX_HEADER: \DeclareExerciseCollection{Hidro}
-
-
-
 #+COLUMNS: %45ITEM %10BEAMER_ENV(Env) %10BEAMER_ACT(Act) %4BEAMER_COL(Col)
 
 
@@ -34,12 +27,6 @@
 
 
 
-<<<<<<< HEAD
-#+INCLUDE: "QO/ReacoesOrganicas/ReacoesOrganicasI.org"
-=======
-#+INCLUDE: "QO/Hidrocarbonetos/HidrocarbonetosIII.org"
->>>>>>> 70b4604d1ddd4c836d65e7dc46d492538c5e0f9e
 
-#+begin_comment
-https://www.ufsm.br/app/uploads/sites/413/2018/12/quimica_ii.pdf
-#+end_comment
+#+INCLUDE: "QO/FuncoesOxigenadas/FuncoesOxigenadas.org"
+
